--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2.2.6
+- bug fix reading a negative number in int[]
+
 2.2.5
 - bug fix ShowReadOnlyProperties and fields
 - bug fix ToJSON() and changing ShowReadOnlyProperties per call on a type
