--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,6 @@
-2.2.6
+2.2.6*
 - bug fix reading a negative number in int[]
+- bug fix object equality hash code checking with JSONParameters.OverrideObjectHashCodeChecking (thanks to MTantos1)
 
 2.2.5
 - bug fix ShowReadOnlyProperties and fields
