--- a/history.txt
+++ b/history.txt
@@ -1,6 +1,7 @@
-2.2.6
+2.3.0
 - bug fix reading a negative number in int[]
 - bug fix object equality hash code checking with JSONParameters.OverrideObjectHashCodeChecking (thanks to MTantos1)
+- added JSONParameters.BlackListTypeChecking default true for friday 13th json attack checking
 
 2.2.5
 - bug fix ShowReadOnlyProperties and fields
