--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2.3.1
+- optimized black list checking
+
 2.3.0
 - bug fix reading a negative number in int[]
 - bug fix object equality hash code checking with JSONParameters.OverrideObjectHashCodeChecking (thanks to MTantos1)
