--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,11 @@
+2.3.2
+- added JSONParameters.FullyQualifiedDataSetSchema for edge case datasets
+- blacklist type checking in DataTable 
+- fix for null values for objects (thanks to ADLER1)
+
 2.3.1
 - optimized black list checking
+- fixed dotnet core project to use AssemblyInfo.cs
 
 2.3.0
 - bug fix reading a negative number in int[]
