--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2.4.0.4
+- bug fix skipping serializing static property in structs
+
 2.4.0.3
 - bug fix edge case for deserialize
 - bug fix datamember use 
